--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "material-ui-example-webpack",
-  "version": "0.15.0",
+  "version": "0.15.1",
   "description": "Sample project that uses Material-UI",
   "repository": {
     "type": "git",
-    "url": "https://github.com/callemall/material-ui.git"
+    "url": "https://github.com/zhukyuri/test-material-ui"
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack-dev-server.config.js --progress --inline --colors",
